--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Flyer Builder</h1>
 
     <p><em>Updated May 2020</em></p>
+    <p>Source at <a href="https://github.com/massimo-cassandro/pdf-flyer">github.com/massimo-cassandro/pdf-flyer</a></p>
 
     <div class="row">
       <div class="col-sm-6">
